# cmake-modules

./: COPYING.txt  README.md
smartglob/: README.md
smartglob/example/: CMakeLists.txt
smartglob/example/src/: main.c
smartglob/example/src/glob-me/: thing.c  thing.h
smartglob/modules/: SmartGlob.cmake
